# bfcl-India

./: .gitignore  LICENSE  README.md  SPEC.md  app.py  blog_post.md  check_indian_quality.py  eval.py  generate_examples.py  generate_indian_training.py  generate_topup.py  inspect_train_indian.py  main.py  prepare_training_data.py  pyproject.toml  quick_score.py  requirements.txt  rescore.py  split_test_set.py  tools.json  utils.py
data/: data_stats.json  seeds.json  train_indian.jsonl
data/eval/: SPLIT.md  dev.jsonl  test.jsonl
notebooks/: data_prep_v2.ipynb  eval_v1_baseline.ipynb  train_v2.ipynb  train_v2_colab.ipynb
reports/: gemini-2.5-flash-lite_partial_report.json  gemini-2.5-flash-lite_predictions.jsonl  gemini-2.5-flash_dev_report.json  google_gemini-2.5-flash_dev_report.json  llama-3.3-70b-versatile_dev_report.json  llama-3.3-70b-versatile_partial_report.json  llama-3.3-70b-versatile_predictions.jsonl  openai_gpt-4o-mini_dev_report.json
