[project]
name = "bfcl-india"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "huggingface-hub>=1.17.0",
    "jsonschema>=4.26.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]
